--- a/styles/style.css
+++ b/styles/style.css
@@ -10,11 +10,365 @@
 ✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
-Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
+Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.*/
 
-*/
+/* АДАПТИВ */
+@media (width <= 375px) {
+  .container {
+    width: 100%;
+  }
 
-.page {
-  min-inline-size: 320px;
-  min-block-size: 100dvb;
+  .button_save {
+    flex-direction: column;
+  }
+
+  .button__inner-icon {
+    width: 28px;
+    height: 28px;
+  }
 }
+
+/* СОЗДАНИЕ КОНТЕЙНЕРА */
+.wrapper {
+  margin-inline: auto;
+  max-width: 43.75rem;
+}
+
+/* СТИЛИ ДЛЯ ШАПКИ */
+.page-container {
+  min-inline-size: 320px;
+  min-block-size: 100vw;
+  /* 100% высоты окна браузера. Можно использовать vh или vmin. */
+  font-variation-settings: "wght" var(--font-weight-body);
+  font-family: var(--font-body), sans-serif;
+  /* "wght": Это сокращение от "weight" (вес) и указывает на особенность шрифта, отвечающую за толщину символов. В CSS переменной --font-weight-body ожидается значение, которое будет использоваться для этой особенности. */
+
+  color: var(--accent-color);
+  background-color: var(--bg-color);
+  background-image: var(--bg-gradient);
+  background-size: cover;
+  background-attachment: fixed;
+  padding-top: var(--padding-block-start-page);
+  padding-bottom: var(--padding-block-end-page);
+  /* Использованы переменные для Верхнего 
+  или левого отступа нижнего или правого отступ с логическими переменными*/
+}
+
+/* HEADER */
+.header__title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: var(--header__title-adaptive);
+  line-height: 1;
+  font-family: var(--font-accent), fantasy;
+  margin-block-end: 25px;
+  /* Отступ снизу Аналог margin-bottom: 25px */
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  padding-block-start: var(--header-adaptive);
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+  margin-block-end: 100px;
+  padding-block-end: 25px;
+}
+
+.header__caption {
+  display: block;
+  margin-top: 20px;
+  font-size: var(--header__caption-adaptive);
+}
+
+/* Меню темы */
+.theme-menu__item {
+  display: flex;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  padding-inline-start: 16px;
+  /* Отступ слева Аналог padding-left: 16px; */
+}
+
+.theme-menu__button {
+  position: relative;
+  display: flex;
+  gap: 4px;
+  padding: 0;
+  text-transform: uppercase;
+  border: none;
+  background-color: transparent;
+  font-family: var(--font-accent), fantasy;
+  font-size: 14px;
+  line-height: 1;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+  /* плавное изменение непрозрачности за 0.3 секунды с эффектом ease */
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6; /* установка прозрачности на 60% */
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  transform: scaleX(0);
+  transform-origin: left;
+  background-color: currentColor;
+  top: 100%;
+  margin-top: 1px;
+  transition: transform 0.3s ease;
+  /* для анимации полоски при фокусе*/
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+  /* scaleX(1): Возвращает элемент к его нормальному размеру по горизонтальной оси (по умолчанию)*/
+}
+
+.theme-menu__button::before {
+  right: 100%;
+  margin-inline-end: 4px;
+  top: 0;
+  position: absolute;
+  content: "▶";
+  color: transparent;
+  pointer-events: none;
+}
+
+.theme-menu__button:disabled::before {
+  animation: infinite arrow 0.5s ease-in-out alternate; /* Бесконечная анимация с названием arrow, длительностью 0.5 секунды,  плавным началом и концом и чередованием состояний */
+  color: currentColor; /* Цвет анимации равен текущему цвету текста элемента */
+}
+
+/* Стили для элемента с классом .theme-menu__button в состоянии disabled */
+.theme-menu__button:disabled {
+  opacity: 0.6; /* Прозрачность элемента установлена на 0.6 (60%) */
+  pointer-events: none; /* События указателя мыши на элементе отключены */
+}
+
+/* СТИЛИ ДЛЯ КАРТОЧЕК */
+@supports ((text-stroke: 1px #000000) or (-webkit-text-stroke: 1px #000000)) {
+  /* Поддержка для текстового обвода */
+  .card__caption {
+    -webkit-text-stroke: 1px var(--bg-color); /* использование текстового обвода с переменной цвета фона */
+    text-stroke: 1px var(--bg-color); /* также установка текстового обвода с переменной цвета фона */
+    text-shadow: none; /* убираем тень у текста */
+  }
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  gap: 52px;
+  margin-bottom: 50px;
+}
+
+.cards__list {
+  display: flex;
+  flex-direction: column;
+  gap: 52px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  background-color: var(--accent-color);
+  border: 2px solid var(--accent-color);
+}
+
+.card__title {
+  font-size: 18px;
+  line-height: 22px;
+  font-variation-settings: "wght" var(--font-weight-title);
+  padding-block-start: 5px;
+  padding-block-end: 4px;
+  padding-inline-start: 10px;
+  padding-inline-end: 24px;
+  background-color: var(--bg-color);
+}
+
+.card__image-group {
+  position: relative;
+}
+
+.card__watermark {
+  z-index: 1;
+  position: absolute;
+  right: 25px;
+  top: 25px;
+  font-size: 14px;
+  line-height: 14px;
+  font-family: var(--font-accent), fantasy;
+  color: var(--accent-color);
+  mix-blend-mode: hard-light;
+  opacity: 0.5;
+  text-shadow:
+    -1px 0px var(--bg-color),
+    0px 1px var(--bg-color),
+    1px 0px var(--bg-color),
+    0px -1px var(--bg-color);
+}
+
+.card__image {
+  width: 100%;
+  height: 100%;
+  color: var(--accent-color);
+  background-color: var(--bg-color);
+  display: block;
+  aspect-ratio: 1 / 1; /* устанавливаем соотношение сторон 1:1 */
+  object-fit: cover;
+}
+
+.card__description {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+}
+
+.card__interaction-field {
+  height: 39px;
+  display: flex;
+  gap: 4px;
+  justify-content: flex-end;
+}
+
+.card__content {
+  background-color: var(--bg-color);
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: 25px;
+}
+
+.card__parapgraph {
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.button {
+  padding: 0;
+  position: relative;
+  min-width: 130px;
+  padding-block: 17px;
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
+  background-color: var(--bg-color);
+  color: var(--accent-color);
+  font-family: var(--font-accent), fantasy;
+  font-size: 14px;
+  line-height: 0.9;
+  border: 2px solid var(--accent-color);
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  transform: scaleX(0);
+  width: 100%;
+  height: 100%;
+  background-color: var(--btn-hover-color);
+  top: 0;
+  left: 0;
+  transform-origin: left;
+  transition: transform 0.5s ease-in-out;
+  mix-blend-mode: difference;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.card__like-button {
+  padding-top: 12px;
+}
+
+.button:hover::before {
+  transform: scaleX(1);
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button_save {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  padding-block: 15px;
+  padding-inline: 19px 21px;
+  align-self: center;
+}
+
+.card__icon-button {
+  cursor: pointer;
+  background-color: transparent;
+  padding: 0;
+  border: 2px solid transparent;
+  transition: border-color 0.3s ease;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color);
+}
+
+.dialog {
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+  max-width: var(--dialog__title-adaptive);
+  padding: 30px;
+}
+
+.dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+.dialog__heading {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 30px;
+  color: var(--accent-color);
+}
+
+.dialog__title {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-family: var(--font-accent), fantasy;
+  line-height: 1.5;
+}
+
+.dialog__icon {
+  min-width: 39px;
+}
+
+.dialog__button {
+  width: 100%;
+  height: 38px;
+}
+
+
