secon commit filters

--- a/styles/style.css
+++ b/styles/style.css
@@ -350,8 +350,8 @@
 
 .dialog__heading {
   display: flex;
-  gap: 20px;
   margin-bottom: 30px;
+  gap: 20px;
   color: var(--accent-color);
 }
 
@@ -371,4 +371,31 @@
   height: 38px;
 }
 
+/* ФИЛЬТРЫ */
+.filter-dark {
+  filter: contrast(110%) grayscale(0.5);
+}
 
+.filter-light {
+  filter: saturate(1.5) grayscale(0.5);
+}
+
+.filter-what-if {
+  filter: hue-rotate(-5deg) sepia(10%) contrast(0.9);
+}
+
+.filter-ideal-css {
+  filter: hue-rotate(-45deg) sepia(1) contrast(0.5);
+}
+
+.filter-who-is-the-closest {
+  filter: contrast(1.2) saturate(150%);
+}
+
+.filter-black-and-white {
+  filter: saturate(5%) contrast(1.2) brightness(1.5);
+}
+
+.filter-low-contrast {
+  filter: brightness(0.9) contrast(0.9) grayscale(0.7) saturate(2);
+}
