--- a/styles/animations.css
+++ b/styles/animations.css
@@ -13,7 +13,41 @@
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
 
-/* ICON */
+/* ИКОНКА АНИМИРОВАННАЯ СЕРДЦЕМ */
+@keyframes arrow {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-4px);
+  }
+}
+
+@keyframes icon-size {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.5);
+  }
+}
+
+@keyframes sparks {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.sparks {
+  opacity: 0;
+}
+
 .contour {
   transition: fill 0.1s linear;
 }
@@ -43,14 +77,14 @@
   transition: fill 0.3s linear 0.05s;
 }
 
-.like-icon:active .core {
-  fill: var(--icon-color);
-  transition: fill 0.3s linear;
-}
-
 .like-icon:active .main-body {
   fill: var(--icon-color);
   transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:active .core {
+  fill: var(--icon-color);
+  transition: fill 0.3s linear;
 }
 
 .like-icon.is-liked .core {
@@ -68,41 +102,6 @@
   transform-origin: center;
 }
 
-.sparks {
-  opacity: 0;
-}
-
 .like-icon.is-liked .sparks {
   animation: 0.3s sparks ease-in 0.3s;
-}
-/* END ICON */
-
-@keyframes arrow {
-  0% {
-    transform: translateX(0);
-  }
-
-  100% {
-    transform: translateX(-4px);
-  }
-}
-
-@keyframes icon-size {
-  0% {
-    transform: scale(1);
-  }
-
-  100% {
-    transform: scale(1.5);
-  }
-}
-
-@keyframes sparks {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
 }
